Update metrics and benchmarking code after module reorganization
- Update JwtMetricsCollector with improved formatting and structure
- Clean up integration test endpoints and base test classes
- Update JMH benchmark classes with refined metrics collection
- Improve metrics post-processing and export functionality
- Update token repository and HTTP client migration tests
- Various code formatting and import optimizations

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>